# likvidacia

./: .gitignore  CMakeLists.txt  README.md  launch.sh
src/: bot.cpp  bot.h  main.cpp  main.h
